--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 .op{
-    background-color: rgb(230, 230, 230);
-    padding: 40px;
+    background-color: rgb(248, 248, 248);
+    padding: 8px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgb(208, 208, 208);  
 }
